--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "description": "Just mekki's porfolio and testing site.",
   "repository": "github:Mekkinen/mekkisite",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "dependencies": {
+    "clientside-require": "^4.7.2",
     "webgl-obj-loader": "^2.0.6"
   }
 }
