--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "repository": "github:Mekkinen/mekkisite",
   "license": "AGPL-3.0",
   "dependencies": {
-    "clientside-require": "^4.7.2",
+    "browserify": "^16.5.0",
+    "uniq": "^1.0.1",
     "webgl-obj-loader": "^2.0.6"
+  },
+  "scripts": {
+    "build": "./node_modules/browserify/bin/cmd.js ./webgl-render/app.js -o ./build/bundle.js"
   }
 }
